package A08_ARA0075_PPS_NA.aula08.Facade;

public class Estoque {
    public boolean verificarDisponibilidade() {
        return true;
    }
}