package A08_ARA0075_PPS_NA.aula08.Facade;

public class Pagamento {
    public void processarPagamento() {
        System.out.println("Pagamento processado.");
    }
}
