package A08_ARA0075_PPS_NA.aula08.Facade;

public class Envio {
    public void enviar() {
        System.out.println("Filme enviado.");
    }
}